--- a/app/src/main/res/layout/weapons_information.xml
+++ b/app/src/main/res/layout/weapons_information.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/weaponSelector"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="5dp"
@@ -41,5 +41,5 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/weaponSelector" />
 </androidx.constraintlayout.widget.ConstraintLayout>
