added (future) support for other languages

--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
         android:ems="10"
-        android:hint="@string/EditCharacterNameDefaultText"
+        android:hint="@string/action_settings"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
         android:layout_marginEnd="40dp"
-        android:text="Next Page"
+        android:text="@string/navigate_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/centerAligner"
         app:layout_constraintTop_toBottomOf="@id/EDIT_CHARISMA" />
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="65dp"
-        android:text="Roll Stats"
+        android:text="@string/roll_stats"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_WISDOM" />
@@ -112,7 +112,7 @@
         android:id="@+id/character_creator_page_one_minimum_health"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="Minimum Health"
+        android:text="@string/minimum_health"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintTop_toTopOf="@id/centerAligner" />
@@ -122,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:text="Maximum Health"
+        android:text="@string/maximum_health"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_minimum_health"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_minimum_health" />
@@ -132,7 +132,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:padding="1dp"
-        android:text="Roll Health"
+        android:text="@string/roll_health"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/character_creator_page_one_maximum_health"
         app:layout_constraintHorizontal_bias="0.0"
@@ -141,14 +141,11 @@
 
     <Button
         android:id="@+id/character_creator_page_one_back_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:backgroundTint="#00FFFFFF"
-        android:padding="0dp"
-        android:text="🔙"
-        android:textAlignment="center"
-        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FFFFFF"
+        android:text="@string/navigate_back"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -168,7 +165,7 @@
         android:id="@+id/STRENGTH_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Strength"
+        android:text="@string/strength_text"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/STRENGTH_ICON"
         app:layout_constraintStart_toStartOf="@id/STRENGTH_ICON"
@@ -260,7 +257,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="Dexterity"
+        android:text="@string/dexterity_text"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_DEXTERITY"
         app:layout_constraintEnd_toEndOf="@id/DEXTERITY_ICON"
@@ -296,7 +293,7 @@
         android:id="@+id/CONSTITUTION_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Constitution"
+        android:text="@string/constitution_text"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@id/EDIT_CONSTITUTION"
         app:layout_constraintEnd_toEndOf="@id/CONSTITUTION_ICON"
@@ -332,7 +329,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="Intelligence"
+        android:text="@string/intelligence_text"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_INTELLIGENCE"
         app:layout_constraintEnd_toEndOf="@id/INTELLIGENCE_ICON"
@@ -367,7 +364,7 @@
         android:id="@+id/WISDOM_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wisdom"
+        android:text="@string/wisdom_text"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_WISDOM"
         app:layout_constraintEnd_toEndOf="@id/WISDOM_ICON"
@@ -402,7 +399,7 @@
         android:id="@+id/CHARISMA_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Charisma"
+        android:text="@string/charisma_text"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_CHARISMA"
         app:layout_constraintEnd_toEndOf="@id/CHARISMA_ICON"
