--- a/app/src/main/res/layout/data_view.xml
+++ b/app/src/main/res/layout/data_view.xml
@@ -14,7 +14,7 @@
         android:id="@+id/dataViewBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/back"
+        android:text="@string/navigate_back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -26,7 +26,7 @@
         android:id="@+id/weaponsinfo"
         android:layout_width="337dp"
         android:layout_height="100dp"
-        android:text="weapons"
+        android:text="@string/weapons_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.519"
@@ -38,7 +38,7 @@
         android:id="@+id/spellsinfo"
         android:layout_width="338dp"
         android:layout_height="100dp"
-        android:text="spells"
+        android:text="@string/spells_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -50,7 +50,7 @@
         android:id="@+id/armorinfo"
         android:layout_width="338dp"
         android:layout_height="100dp"
-        android:text="armor"
+        android:text="@string/armor_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
