--- a/app/src/main/res/layout/dice_roller.xml
+++ b/app/src/main/res/layout/dice_roller.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#75C7AE"
-        android:text="Button"
+        android:text="Back"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
