--- a/app/src/main/res/layout/weapons_information.xml
+++ b/app/src/main/res/layout/weapons_information.xml
@@ -24,9 +24,11 @@
         android:id="@+id/spinner"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="70dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.126" />
 </androidx.constraintlayout.widget.ConstraintLayout>
