--- a/app/src/main/res/layout/dm_player_manager.xml
+++ b/app/src/main/res/layout/dm_player_manager.xml
@@ -1,183 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DMPlayerManager">
-
-    <!-- TODO: Update blank fragment layout -->
-
-    <Button
-        android:id="@+id/toSheet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.114"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/dpmToMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="main"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.913"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p1Name"
-        android:layout_width="160dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:hint="Name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p3Level"
-        android:layout_width="72dp"
-        android:layout_height="48dp"
-        android:hint="Level"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.338" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p3Name"
-        android:layout_width="160dp"
-        android:layout_height="48dp"
-        android:hint="Name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/p3PP"
-        app:layout_constraintHorizontal_bias="0.019"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p3AC"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="88dp"
-        android:hint="AC"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/p3Name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p3PP"
-        android:layout_width="86dp"
-        android:layout_height="49dp"
-        android:hint="PP"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.34" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p2Level"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="52dp"
-        android:hint="Level"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/p2PP"
-        app:layout_constraintHorizontal_bias="0.394"
-        app:layout_constraintStart_toStartOf="@+id/p2Name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.234" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p2Name"
-        android:layout_width="157dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="248dp"
-        android:hint="Name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/p2PP"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.236" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p2AC"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="32dp"
-        android:hint="AC"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/p2PP"
-        app:layout_constraintHorizontal_bias="0.722"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.234" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p2PP"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:hint="PP"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.234" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p1PP"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:hint="PP"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p1Level"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="160dp"
-        android:hint="Level"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/p1Name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/p1AC"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:hint="AC"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.758"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".DMPlayerManager" />
