--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -10,22 +10,11 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <Switch
-        android:id="@+id/switch6"
-        android:layout_width="305dp"
-        android:layout_height="62dp"
-        android:text="Switch"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.923" />
-
     <Button
         android:id="@+id/SettingsBack"
         android:layout_width="84dp"
         android:layout_height="80dp"
-        android:text="@string/back"
+        android:text="@string/navigate_back"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
