--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
         android:ems="10"
-        android:hint="@string/action_settings"
+        android:hint="@string/text_common_settings"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="65dp"
-        android:text="@string/roll_stats"
+        android:text="@string/action_character_roll_stats"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_WISDOM" />
@@ -112,7 +112,7 @@
         android:id="@+id/character_creator_page_one_minimum_health"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="@string/minimum_health"
+        android:text="@string/action_character_minimum_health"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintTop_toTopOf="@id/centerAligner" />
@@ -122,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:text="@string/maximum_health"
+        android:text="@string/action_character_maximum_health"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_minimum_health"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_minimum_health" />
@@ -132,7 +132,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:padding="1dp"
-        android:text="@string/roll_health"
+        android:text="@string/action_character_roll_health"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/character_creator_page_one_maximum_health"
         app:layout_constraintHorizontal_bias="0.0"
@@ -143,7 +143,7 @@
         android:id="@+id/character_creator_page_one_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#75C7AE"
         android:text="@string/navigate_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -165,7 +165,7 @@
         android:id="@+id/STRENGTH_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/strength_text"
+        android:text="@string/ability_text_strength"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/STRENGTH_ICON"
         app:layout_constraintStart_toStartOf="@id/STRENGTH_ICON"
@@ -257,7 +257,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="@string/dexterity_text"
+        android:text="@string/ability_text_dexterity"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_DEXTERITY"
         app:layout_constraintEnd_toEndOf="@id/DEXTERITY_ICON"
@@ -293,7 +293,7 @@
         android:id="@+id/CONSTITUTION_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/constitution_text"
+        android:text="@string/ability_text_constitution"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@id/EDIT_CONSTITUTION"
         app:layout_constraintEnd_toEndOf="@id/CONSTITUTION_ICON"
@@ -329,7 +329,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="@string/intelligence_text"
+        android:text="@string/ability_text_intelligence"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_INTELLIGENCE"
         app:layout_constraintEnd_toEndOf="@id/INTELLIGENCE_ICON"
@@ -364,7 +364,7 @@
         android:id="@+id/WISDOM_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/wisdom_text"
+        android:text="@string/ability_text_wisdom"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_WISDOM"
         app:layout_constraintEnd_toEndOf="@id/WISDOM_ICON"
@@ -399,7 +399,7 @@
         android:id="@+id/CHARISMA_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/charisma_text"
+        android:text="@string/ability_text_charisma"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_CHARISMA"
         app:layout_constraintEnd_toEndOf="@id/CHARISMA_ICON"
