--- a/app/src/main/res/layout/character_list.xml
+++ b/app/src/main/res/layout/character_list.xml
@@ -21,12 +21,11 @@
         android:id="@+id/character_list_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#75C7AE"
         android:text="@string/navigate_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/character_list_choose_character_text"
