--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -62,7 +62,7 @@
         android:id="@+id/textInputEditText2"
         android:layout_width="399dp"
         android:layout_height="71dp"
-        android:hint="@string/help_search"
+        android:hint="@string/text_help_search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:text="@string/text_help_center"
+        android:text="@string/text_help_center_title"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
