--- a/app/src/main/res/layout/weapons_information.xml
+++ b/app/src/main/res/layout/weapons_information.xml
@@ -36,6 +36,16 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/weaponDamage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:padding="5dp"
+                android:text="@string/text_weapon_damage"
+                android:textColor="@color/black" />
+
+            <TextView
                 android:id="@+id/weaponDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,7 +72,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
                 android:padding="5dp"
-                android:text="@string/text_weapon_rarity"
+                android:text="@string/text_weapon_description"
                 android:textColor="@color/black" />
 
             <TextView
@@ -103,10 +113,11 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="70dp" />
+        app:layout_constraintTop_toBottomOf="@+id/backtodataview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
