im a programmer right

--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
         android:ems="10"
-        android:hint="@string/text_common_settings"
+        android:hint="@string/text_default_character_name"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -79,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
         android:layout_marginEnd="40dp"
+        android:backgroundTint="@color/purple"
         android:text="@string/navigate_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/centerAligner"
@@ -90,6 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="65dp"
+        android:backgroundTint="@color/purple"
         android:text="@string/action_character_roll_stats"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,6 +114,7 @@
         android:id="@+id/character_creator_page_one_minimum_health"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/purple"
         android:text="@string/action_character_minimum_health"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
@@ -122,6 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
+        android:backgroundTint="@color/purple"
         android:text="@string/action_character_maximum_health"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_minimum_health"
@@ -131,6 +135,7 @@
         android:id="@+id/character_creator_page_one_roll_health"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/purple"
         android:padding="1dp"
         android:text="@string/action_character_roll_health"
         android:textSize="12sp"
@@ -157,6 +162,7 @@
         android:layout_marginTop="10dp"
         android:adjustViewBounds="true"
         android:background="@drawable/strength"
+        android:backgroundTint="@color/black"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_subrace" />
@@ -246,6 +252,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
+        android:backgroundTint="@color/black"
         android:src="@drawable/dexterity"
         app:layout_constraintBottom_toTopOf="@+id/DEXTERITY_TEXT"
         app:layout_constraintEnd_toStartOf="@id/CONSTITUTION_ICON"
@@ -284,6 +291,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
+        android:backgroundTint="@color/black"
         android:src="@drawable/constitution"
         app:layout_constraintBottom_toTopOf="@+id/CONSTITUTION_TEXT"
         app:layout_constraintEnd_toEndOf="parent"
@@ -319,6 +327,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="40dp"
+        android:backgroundTint="@color/black"
         android:src="@drawable/intelligence"
         app:layout_constraintBottom_toTopOf="@+id/INTELLIGENCE_TEXT"
         app:layout_constraintStart_toStartOf="parent"
@@ -354,6 +363,7 @@
         android:id="@+id/WISDOM_ICON"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:backgroundTint="@color/black"
         android:src="@drawable/wisdom"
         app:layout_constraintBottom_toTopOf="@+id/WISDOM_TEXT"
         app:layout_constraintEnd_toStartOf="@id/CHARISMA_ICON"
@@ -390,6 +400,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="40dp"
+        android:backgroundTint="@color/black"
         android:src="@drawable/charisma"
         app:layout_constraintBottom_toTopOf="@+id/CHARISMA_TEXT"
         app:layout_constraintEnd_toEndOf="parent"
